fix minor alignment issues

--- a/styles/timer.css
+++ b/styles/timer.css
@@ -28,11 +28,9 @@ div#timer_and_stats {
 
 div.practice_layout {
     width: 100%;
-    height: 100%;
-}
-
-div#mainTable {
-    height: 100%;
+    flex-grow: 1;
+    padding: 0.5em;
+    box-sizing: border-box;
 }
 
 div#casesBox {
